--- a/ui/html/contest.page.html
+++ b/ui/html/contest.page.html
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-sm-2"></div>
   <h3>Contest</h3>
-  <p id="message"></p>
+  <p id="message" class="error" style="color:rgb(255, 0, 0)"></p>
   <br>
   <p id="contest-band">Band: {{.Band}}</p>
   <p id="contest-mode">Mode: {{.Mode}}</p>
