--- a/ui/html/defaults.page.html
+++ b/ui/html/defaults.page.html
@@ -19,19 +19,19 @@
 	    <p>Contest start date is set to: {{.ContestDate}}</p>
 	    <p>Contest start time is set to: {{.ContestTime}}</p>
 	    {{if .Field1Name}}
-	       <p>{{.Field1Name}} is set to: {{.Field1Data}}</p>
+	       <p>{{.Field1Name}} is set to: {{.Field1Sent}}</p>
 	    {{end}}
 	    {{if .Field2Name}}
-	       <p>{{.Field2Name}} is set to: {{.Field2Data}}</p>
+	       <p>{{.Field2Name}} is set to: {{.Field2Sent}}</p>
 	    {{end}}
 	    {{if .Field3Name}}
-	       <p>{{.Field3Name}} is set to: {{.Field3Data}}</p>
+	       <p>{{.Field3Name}} is set to: {{.Field3Sent}}</p>
 	    {{end}}
 	    {{if .Field4Name}}
-	       <p>{{.Field4Name}} is set to: {{.Field4Data}}</p>
+	       <p>{{.Field4Name}} is set to: {{.Field4Sent}}</p>
 	    {{end}}
             {{if .Field5Name}}
-	       <p>{{.Field5Name}} is set to: {{.Field5Data}}</p>
+	       <p>{{.Field5Name}} is set to: {{.Field5Sent}}</p>
 	    {{end}}
 	 {{end}}
 
