Setting up defaults for contesting the contesting page and the radio interface are done, next comes using it in contests

--- a/ui/html/defaults.page.html
+++ b/ui/html/defaults.page.html
@@ -68,6 +68,7 @@
   	       <option selected>Select contest mode</option>
   	       <option value="1">Yes</option>
   	       <option value="2">No</option>
+	       <option value="3">Switch</option>
 	    </select>
 	 </div>
       </div>
