--- a/ui/html/base.layout.html
+++ b/ui/html/base.layout.html
@@ -104,10 +104,12 @@ p, h2, h3, h4, h5, th, td, input, span, button {
 
 <div class="row">
   <div class="col-sm-1"></div>
-
-
+  
 
   <div class="col-sm-10">
+	  <p  style="color:rgb(255, 0, 0)">{{.Message}}</p>
+
+
 
     {{template "main" .}}
 
