added Yaesu radio login option to the default page

--- a/ui/html/base.layout.html
+++ b/ui/html/base.layout.html
@@ -41,7 +41,7 @@ p, h2, h3, h4, h5, th, td, input, span, button {
 
 <nav class="navbar navbar-expand-lg" style="background-color: #442C2E">
   <div class="container-fluid">
-    <a  class="nav-link" style="color: white" href="/home">AD2CC Station Master</a>
+    <a  class="nav-link" style="color: white" href="/home">N2VY Station Master</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -85,10 +85,12 @@ p, h2, h3, h4, h5, th, td, input, span, button {
         <li class="nav-item">
           <a class="nav-link" style="color: white" href="/cabrillo">Cabrillo</a>
         </li>
-
+<!--
         <li class="nav-item">
           <a class="nav-link" style="color: white" href="/start-vfo">VFO</a>
         </li>
+-->
+
 	 <li class="nav-item">
           <a class="nav-link" style="color: white" href="/contest">Contest</a>
         </li>
