--- a/ui/html/contest.page.html
+++ b/ui/html/contest.page.html
@@ -21,7 +21,7 @@
 	  <input type="text" class="form-control" id="call-sign"
 	  name="call" aria-describedby="basic-addon3" autofocus>
 	</div>
-	<p id="dupe-call"><p>
+	<p id="dupe-call" class="fw-bold"  style="color:rgb(255, 0, 0)"><p>
 
   </div>
   {{if .Field1Name }}
