--- a/ui/html/footer.partial.html
+++ b/ui/html/footer.partial.html
@@ -2,7 +2,7 @@
 
 <div class="fix bottom">
   <br><br><br><br><br><br><br><br>
-  <p>Copyright 2021 AD2CC</p>
+  <p>Copyright 2021 AD2CC; 2024 N2VY</p>
   
 </div>
 
